# public/swagger.json
@@ -276,7 +276,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"AssignRequest": {
+			"AssignRacketRequest": {
 				"properties": {
 					"playerEid": {
 						"type": "string"
@@ -288,6 +288,170 @@
 				"required": [
 					"playerEid",
 					"racketEid"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ClubCreateRequest": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"address": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"city": {
+						"type": "string"
+					},
+					"country": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"name",
+					"address",
+					"description",
+					"city",
+					"country"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CourtSurface": {
+				"enum": [
+					"GRASS",
+					"CLAY",
+					"HARD"
+				],
+				"type": "string"
+			},
+			"ClubResponse": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"address": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"city": {
+						"type": "string"
+					},
+					"country": {
+						"type": "string"
+					},
+					"courts": {
+						"items": {
+							"$ref": "#/components/schemas/CourtResponse"
+						},
+						"type": "array"
+					},
+					"courtsNumber": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"address",
+					"description",
+					"city",
+					"country",
+					"courtsNumber"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CourtResponse": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"surface": {
+						"$ref": "#/components/schemas/CourtSurface"
+					},
+					"stands": {
+						"type": "boolean"
+					},
+					"roof": {
+						"type": "boolean"
+					},
+					"double": {
+						"type": "boolean"
+					},
+					"clubId": {
+						"type": "string"
+					},
+					"club": {
+						"$ref": "#/components/schemas/ClubResponse"
+					},
+					"pricePerHour": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"surface",
+					"stands",
+					"roof",
+					"double",
+					"clubId",
+					"pricePerHour"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"CourtCreateRequest": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"surface": {
+						"$ref": "#/components/schemas/CourtSurface"
+					},
+					"stands": {
+						"type": "boolean"
+					},
+					"roof": {
+						"type": "boolean"
+					},
+					"double": {
+						"type": "boolean"
+					},
+					"pricePerHour": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"surface",
+					"stands",
+					"roof",
+					"double",
+					"pricePerHour"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"AssignCourtRequest": {
+				"properties": {
+					"courtEntityID": {
+						"type": "string"
+					},
+					"clubEntityID": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"courtEntityID",
+					"clubEntityID"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -587,11 +751,322 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/AssignRequest"
+								"$ref": "#/components/schemas/AssignRacketRequest"
 							}
 						}
 					}
 				}
+			}
+		},
+		"/clubs": {
+			"post": {
+				"operationId": "CreateClub",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Clubs"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ClubCreateRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/clubs/all": {
+			"get": {
+				"operationId": "GetAllClubs",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ClubResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Clubs"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/clubs/city/{city}": {
+			"get": {
+				"operationId": "GetClubsByCity",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/ClubResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Clubs"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "city",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/clubs/{entityId}": {
+			"get": {
+				"operationId": "GetById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/ClubResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Clubs"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "entityId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/courts/all": {
+			"get": {
+				"operationId": "GetAllCourts",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/CourtResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Courts"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/courts/{entityId}": {
+			"get": {
+				"operationId": "GetById",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CourtResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Courts"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "entityId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
+		},
+		"/courts": {
+			"post": {
+				"operationId": "CreateCourt",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "string"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Courts"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CourtCreateRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/courts/unassigned": {
+			"get": {
+				"operationId": "GetUnassignedCourts",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/CourtResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Courts"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/courts/assign": {
+			"post": {
+				"operationId": "AssignCourtToClub",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Courts"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/AssignCourtRequest"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/courts/price": {
+			"get": {
+				"operationId": "FindByPrice",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/CourtResponse"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Courts"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "from",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "to",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
 			}
 		}
 	},
