# src/requests/assignCourtRequest.ts
@@ -1,0 +1,5 @@
+
+export interface AssignCourtRequest {
+    courtEntityID: string;
+    clubEntityID: string;
+}
