# src/requests/courtCreateRequest.ts
@@ -1,13 +1,10 @@
 import CourtSurface from "../enums/courtSurface";
-import ClubResponse from "./clubResponse";
 
-export default interface CourtResponse {
+export default interface CourtCreateRequest {
     name: string;
     surface: CourtSurface;
     stands: boolean;
     roof: boolean;
     double: boolean;
-    clubId: string;
-    club?: ClubResponse;
     pricePerHour: number;
 }
